# Langchain_demo

./: Dockerfile  api.py  application.py  constants.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  yaml_uploader.py
acfilter/: ACAutomaton.py  acfilter.py  build.py
chains/: chain_builder.py
config/: config.py  dev.yaml  local.yaml  prod.yaml
db/: connection.py  create.sql  sql.sql
persistence/: ac_model.pkl  sensitive words.txt
profiles/Yuki/: profile.yaml
profiles/Yuki/affection/: affection_rules.yaml
profiles/Yuki/scenes/: cafe.yaml
prompts/: prompt_builder.py
services/: ChatService.py
utils/: config_loader.py  long_term_memory.py  short_term_memory.py
